alignment fixed

--- a/frontend/src/pages/cart/Cart.css
+++ b/frontend/src/pages/cart/Cart.css
@@ -14,8 +14,8 @@
   align-items: center;
   padding-bottom: 20px;
   max-width: 800px;
-  margin: 10px;
-  padding: 5px;
+  margin: 0px;
+  padding: 0px;
 }
 
 .cartItem {
@@ -37,7 +37,6 @@
   align-items: flex-start;
   justify-content: flex-start;
   width: 100%;
-  max-width: 98%;
 }
 
 .cartQuantity {
@@ -374,7 +373,7 @@
   .cartImg {
     width: 100px;
     height: 100px;
-    margin: 14px;
+    margin: 8px;
     border-radius: 3px;
     display: flex;
   }
@@ -391,7 +390,6 @@
   margin: 5px 0px;
   margin-top: 0;
   font-weight: bold;
-  margin-left: 8px;
   border-bottom: 2px solid #d4d4d4;
   margin-bottom: 10px;
 }
